<resources>
    <string name="app_name">PetCare</string>
    <string name="pets">Питомцы</string>
    <string name="account">Аккаунт</string>
    <string name="appointments">Записи</string>
    <string name="home">Главная</string>
    <string name="petcare">PetCare</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="entry">Вход</string>
    <string name="phone">Номер телефона</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="petcare_logo">PetCare logo</string>
    <string name="ok">OK</string>

    <string name="error_fill_all_fields">Заполните все поля</string>
    <string name="error_passwords_are_not_the_same">Пароли не совпадают</string>
    <string name="error_invalid_phone_format">Неверный формат номера телефона</string>
    <string name="error_invalid_credentials">Неверные учетные данные</string>
    <string name="error_network">Нет подключения к интернету</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_client_already_exists">Пользователь с таким номером уже существует</string>
    <string name="error_title">Ошибка</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>