<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home_tab"
        android:orderInCategory="1"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_appointments_tab"
        android:orderInCategory="2"
        android:icon="@drawable/ic_calendar"
        android:title="@string/appointments"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_pets_tab"
        android:orderInCategory="3"
        android:icon="@drawable/ic_paw"
        android:title="@string/pets"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_profile_tab"
        android:orderInCategory="4"
        android:icon="@drawable/ic_person"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>